was added to the member contol block for this purpose.

Changed the conference state event implementation so that speaking/silent
notifications are generated in the member thread. The advantage of this
approach is that it doesn't require the conference thread to periodically
scan the member list for member state changes.

Changed "x" option so that all members are kicked and the conference ends when
the last moderator leaves the conference.

Added a Makefile variable AC_USE_SPEEX. The default value is undefined, that
is, the SPEEX codec is not available.

Changed the format of the conference list command. Specifically, removed the
bucket field and added a duration field. The duration field indicates either
the conference elapsed time when conferences are listed or the member elapsed
time when members are listed.

Deprecated management commands KonferenceList and KonferenceEnd as similar
functions are available from the command line and via the AMI command action.

Deprecated input smoothing and output packing because packet size is fixed at
20 milliseconds so these functions are unnecessary.

Added a compiler flag, CACHE_CONTROL_BLOCKS, for conference and member block
reuse. To disable control block reuse edit the Makefile or clear it on the
command line: make CACHE_CONTROL_BLOCKS=0.

Changed the conference event privilege to user to reduce the number of events
an application has to monitor to support a conference.

Fix for compiling module with Asterisk 1.8. This fix is compatible with prior
Asterisk releases 1.4 and 1.6.

Deleted the RCS identifiers at the top of the module files because we're using
subversion. Deleted the TODO file since it's not being used to track future
enhancements. Fixed the Makefile clean target so that the module shared object
gets deleted with the other object files and deleted the distclean target.
Fixed the Makefile so that the module is compiled whenever an include file is
modified.
